updates create message logic